--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angularjs-rails-resource",
   "description" : "A resource factory inspired by $resource from AngularJS",
-  "version": "2.0.0",
-  "main" : "dist/angularjs-rails-resource.min.js",
+  "version": "2.1.0",
+  "main" : "dist/angularjs-rails-resource.js",
   "homepage" : "https://github.com/FineLinePrototyping/angularjs-rails-resource.git",
   "author" : "",
   "repository": {
