--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angularjs-rails-resource",
   "description" : "A resource factory inspired by $resource from AngularJS",
   "version": "2.3.0",
-  "main" : "angularjs-rails-resource.min.js",
+  "main" : "dist/angularjs-rails-resource.js",
   "homepage" : "https://github.com/FineLinePrototyping/angularjs-rails-resource.git",
   "author" : "",
   "repository": {
